# os-plugin-initializer

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
src/: main.rs  zip_file.rs
src/resources/assets/zip/: gitignore
src/resources/templates/: index.html
src/resources/templates/zip/: ExampleAnalyzer.txt  ExampleAnalyzerTest.txt  HELP.md  build.gradle.txt  moduleContext.xml  pom.xml
web/: rspack.config.js  script.js  style.css
