[package]
name = "os-plugin-initializer"
version = "0.1.0"
edition = "2024"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "AGPL-3"

[dependencies]
axum = { version = "0.8", features = ["query"]}
askama = { version = "0.14" }
tokio = { version = "1.45", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "4.2", features = ["time"] }
regex = "1.11"
time = "0.3"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
